Ajustes Front-end

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- title -->
-    <title>Natália Bessa</title>
+    <title>Natália Besssa</title>
     <!-- CSS -->
     <link rel="stylesheet" href="css/extends.css" />
     <!-- Fonts -->
@@ -21,56 +21,44 @@
     <!-- navbar -->
     <nav class="navbar">
       <div class="navbar__content max-width mb-0">
-        <h1>Natália Bessa</h1>
+        <!-- <h1>Natália Bessa</h1> -->
         <ul class="navbar__links">
           <li><a href="#header">Início</a></li>
           <li><a href="#projects">Projetos</a></li>
+          <li><a href="#links">Lins Repositório</a></li>
+
         </ul>
         <div class="navbar__mobile">
           <img src="assets/menu.webp" alt="menu" class="burguer" />
           <ul class="mobile__links">
             <li><a href="#header">Início</a></li>
             <li><a href="#projects">Projetos</a></li>
+            <li><a href="#links">Lins Repositório</a></li>
+
           </ul>
         </div>
       </div>
     </nav>
 
     <!-- header -->
-    <header id="header" class="max-width">
-      <div class="header__left">
-        <h1>Olá! Sou Natália Desenvolvedora </h1>
-        <p>
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-          Odio, repellat soluta porro mollitia ratione aperiam accusamus rerum quos sint,
-          molestias temporibus vel, excepturi magnam labore asperiores?
-          Blanditiis voluptates eaque dicta?
-        </p>
-      </div>
+    <!-- <header id="header" class="max-width">
+        <h2 class="name">Natália Bessa</h2>
+      
       <div class="header__right">
         <div class="header__image">
           <img src="assets/natalia.jpg" alt="Natalia" class="natalia" />
         </div>
       </div>
-    </header>
+    </header> -->
 
-    <!-- Sobre
+    <!-- Sobre -->
     <section id="about" class="about max-width">
       <div class="about__left">
-        <h2 class="secondary-title">Além do código: quem sou eu?</h2>
+        <h2 class="secondary-title">Quem sou eu</h2>
         <p>
+          Olá, me chamo Natália tenho 31 anos, atualmente estou cursando o 6 Desenvolvimento de Software e Multiplataforma,
+          na FATEC de São José dos Campos.
         </p>
-        <ul>
-          <li>
-            <a href="#"><img src="assets/instagram.svg" alt="Instagram" /></a>
-          </li>
-          <li>
-            <a href="#"><img src="assets/linkedin.svg" alt="Linkedin" /></a>
-          </li>
-          <li>
-            <a href="#"><img src="assets/facebook.svg" alt="Facebook" /></a>
-          </li>
-        </ul>
       </div>
       <div class="about__right">
         <h3 class="tertiary-title mb-m">
@@ -80,15 +68,12 @@
         <p>
         </p>
       </div>
-    </section> -->
+    </section>
 
     <!-- Projetos -->
     <section id="projects" class="projects max-width">
       <div class="projects__content">
         <h2 class="secondary-title">Projetos Faculdade</h2>
-        <p>
-          Aqui alguns dos meus trabalhos desenvolvidos na faculdade.
-        </p>
       </div>
       <ul>
         <li>
@@ -100,12 +85,29 @@
               Projeto integrador 1º Semestre
             </h3>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-              Totam distinctio ut fugit quaerat quibusdam exercitationem ea soluta, 
-              nihil omnis. Hic explicabo autem saepe, debitis eius omnis similique sequi magnam tenetur!
+              Desenvolver um portal de comunicação alternativo para a FATEC durante a pandemia de COVID-19,
+              visando aliviar a sobrecarga do portal oficial e garantir acesso contínuo a informações e
+              serviços essenciais para alunos, professores e funcionários.
+            </p>
+            <h3 class="tertiary-title">
+              Tecnologias Utilizadas
+            </h3>
+            <p>
+              Flask,
+              Python e
+              MySQL.
+            </p>
+            <h3 class="tertiary-title">
+              Minha função
+            </h3>
+            <p>
+              Nessa Sprint eu fiquei com a parte de desing do projeto, onde desenhei telas no figma para o front-end,
+              onde apredi HTML e CSS e a parte de fluxo de telas.
             </p>
           </div>
         </li>
+
+
         <li class="projects__reversed-list">
           <div class="image">
             <img src="assets/ionic.png" alt="ionic" />
@@ -115,12 +117,30 @@
               Projeto integrador 2º Semestre
             </h3>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-              Totam distinctio ut fugit quaerat quibusdam exercitationem ea soluta, 
-              nihil omnis. Hic explicabo autem saepe, debitis eius omnis similique sequi magnam tenetur!
+              Desenvolver uma plataforma abrangente e segura para a gestão de talentos, que atenda às necessidades da área de Recursos Humanos e
+              Departamento Pessoal, permitindo o controle completo dos colaboradores (CLT e PJ) desde o momento da contratação, incluindo cadastro,
+              controle de documentação,
+              dados pessoais e outras informações relevantes, garantindo a conformidade com a LGPD e o acesso restrito aos dados sensíveis.
             </p>
+            <h3 class="tertiary-title">
+              Tecnologias Utilizadas
+            </h3>
+            <p>
+              JavaScrip,
+              MySql e
+              React
+            </p>
+            <h3 class="tertiary-title">
+              Minha função
+            </h3>
+            <p>
+              Nessa Sprint eu fiquei com a função de P.O. conversei com cliente, e entendi onde estava a dor dele,
+              para poder desenvolver tasks para
+              o time de DEV, ajustei as entregas para cada sprint.
+              Com essa experiencia aprendi sobre a parte de metodologia agil.
           </div>
         </li>
+
         <li>
           <div class="image">
             <img src="assets/uol.png" alt="uol" />
@@ -130,12 +150,30 @@
               Projeto integrador 3º Semestre
             </h3>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-              Totam distinctio ut fugit quaerat quibusdam exercitationem ea soluta, 
-              nihil omnis. Hic explicabo autem saepe, debitis eius omnis similique sequi magnam tenetur!
+              Desenvolver, em parceria com os alunos do 3º DSM da Fatec São José dos Campos, alternativas disruptivas de 
+              cross-selling para a plataforma online da UOL, visando aumentar a receita da empresa e melhorar a experiência do usuário, 
+              oferecendo produtos e serviços adicionais relevantes durante o processo de compra.
             </p>
+            <h3 class="tertiary-title">
+              Tecnologias Utilizadas
+            </h3>
+            <p>
+              Java,
+              Mongo e
+              React
+            </p>
+            <h3 class="tertiary-title">
+              Minha função
+            </h3>
+            <p>
+              Nessa Sprint fiquei no back end, foi a primeira vez que trabalhamos com JAVA e um banco não relacional (MONGODB),
+              foi uma nova experiencia ótima, onde desenvolvi conhecimento tanto sobre uma linguagem nova,
+              quando uma nova forma de usar um banco de dados
+            </p>
+              
           </div>
         </li>
+
         <li class="projects__reversed-list">
           <div class="image">
             <img src="assets/tecsus.png" alt="tecsus" />
@@ -145,12 +183,33 @@
               Projeto integrador 4º Semestre
             </h3>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-              Totam distinctio ut fugit quaerat quibusdam exercitationem ea soluta, 
-              nihil omnis. Hic explicabo autem saepe, debitis eius omnis similique sequi magnam tenetur!
+              Desenvolver uma estação meteorológica capaz de coletar e transmitir dados meteorológicos em tempo real, 
+              como temperatura, umidade, pressão atmosférica, direção e velocidade do vento e radiação solar, para um servidor na nuvem,
+              disponibilizando-os para usuários e pesquisadores, 
+              com o intuito de monitorar as condições climáticas e auxiliar em projetos de pesquisa em diversas áreas.
+            </p>
+            <h3 class="tertiary-title">
+              Tecnologias Utilizadas
+            </h3>
+            <p>
+              Python,
+              TypeScript,
+              C/C++,
+              MongoDB,
+              Mysql e
+              React
+            </p>
+
+            <h3 class="tertiary-title">
+              Minha função
+            </h3>
+            <p>
+              Nessa Sprint fiquei na função de Master, onde procurava entender as dificuldades e duvidas do time para ajuda-los,
+              também ajudei na parte do back end.
             </p>
           </div>
         </li>
+
         <li>
           <div class="image">
             <img src="assets/task-manager.png" alt="task-manager" />
@@ -160,29 +219,92 @@
               Projeto integrador 5º Semestre
             </h3>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-              Totam distinctio ut fugit quaerat quibusdam exercitationem ea soluta, 
-              nihil omnis. Hic explicabo autem saepe, debitis eius omnis similique sequi magnam tenetur!
+              Desenvolver uma aplicação para auxiliar na organização e planejamento de objetivos e tarefas diárias,
+              priorizando-as por urgência, com marcações de tempo para controle preciso, mensuração da quantidade de tarefas realizadas e 
+              apresentação mensal de resultados em um dashboard, visando otimizar a rotina pessoal e profissional dos usuários.
+            </p>
+            <h3 class="tertiary-title">
+              Tecnologias Utilizadas
+            </h3>
+            <p>
+              TypeScript,
+              MongoDB e
+              React Native
+            </p>
+            <h3 class="tertiary-title">
+              Minha função
+            </h3>
+            <p>
+              Nessa Sprint fiquei no Front-end, onde foi uma experiencia ótima pra mim, gostei muito de desenvolver para mobile.
             </p>
           </div>
         </li>
+
         <li class="projects__reversed-list">
           <div class="image">
-            <img src="assets/pet-shop.png" alt="pet-shop" />
+            <img src="assets/domRock.png" alt="task-manager" />
           </div>
           <div class="projects__info">
             <h3 class="tertiary-title">
-              Projeto react native 
+              Projeto integrador 6º Semestre
             </h3>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-              Totam distinctio ut fugit quaerat quibusdam exercitationem ea soluta, 
-              nihil omnis. Hic explicabo autem saepe, debitis eius omnis similique sequi magnam tenetur!
+              O objetivo deste projeto é desenvolver um sistema inovador que utiliza inteligência artificial (IA) em 
+              linguagem natural para sumarizar automaticamente grandes volumes de comentários de clientes. O sistema irá gerar 
+              resumos concisos e informativos,
+              categorizados por diversos critérios relevantes para análise, como produto, categoria, recomendação, geografia e demografia.
             </p>
-          </div>
+            <h3 class="tertiary-title">
+              Tecnologias Utilizadas
+            </h3>
+            <p>
+              Python,
+              PostgreSQL,
+              EC2,
+              PLN e
+              React
+            </p>
+            <h3 class="tertiary-title">
+              Minha função
+            </h3>
+            <p>
+              Nessa Sprint fiquei no Front-end e na integração do Back-end com o Front-end.
+            </p>
         </li>
+          </div>
       </ul>
     </section>
+
+    <section id="links" class="projects max-width">
+      <div class="projects__content">
+        <h2 class="secondary-title">Links para Git Hub</h2>
+      </div>
+      <div class="projects__info">
+        <ul>
+          <li>
+              <a class="links" href="https://github.com/EquipeGfour/API-GFour-Primeiro-Semestre-">
+                Projeto integrador 1º Semestre
+              </a>
+              <a class="links" href="https://github.com/EquipeGfour/Api-2-Semestre-">
+                Projeto integrador 2º Semestre
+              </a>
+              <a class="links" href="https://github.com/EquipeGfour/API-3Semestre-UOL">
+                Projeto integrador 3º Semestre
+              </a>
+          </li>
+          <li>
+              <a class="links" href="https://github.com/EquipeGfour/API-4SemestreDSM-EstacaoMeteorologica">
+                Projeto integrador 4º Semestre
+              </a>
+              <a class="links" href="https://github.com/EquipeGfour/API-5Semestre-OracleAcademy">
+                Projeto integrador 5º Semestre
+              </a>
+              <a class="links" href="https://github.com/EquipeGfour/API-6-Semestre-Dom-Rock">
+                Projeto integrador 6º Semestre
+              </a>
+          </li>
+        </ul>
+      </div>
     <!-- script -->
     <script src="scripts/index.js"></script>
   </body>
