--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     </header> -->
 
     <!-- Sobre -->
-    <section id="about" class="about max-width">
+    <section id="header" class="about max-width">
       <div class="about__left">
         <h2 class="secondary-title">Quem sou eu</h2>
         <p>
