--- a/index.html
+++ b/index.html
@@ -18,27 +18,30 @@
     />
   </head>
   <body>
-    <!-- navbar -->
-    <nav class="navbar">
-      <div class="navbar__content max-width mb-0">
-        <!-- <h1>Natália Bessa</h1> -->
-        <ul class="navbar__links">
-          <li><a href="#header">Início</a></li>
-          <li><a href="#projects">Projetos</a></li>
-          <li><a href="#links">Lins Repositório</a></li>
+   <!-- navbar -->
+<nav class="navbar">
+  <div class="navbar__content max-width mb-0">
+    <!-- <h1>Natália Bessa</h1> -->
+    <ul class="navbar__links">
+      <li><a href="#header">Início</a></li>
+      <li><a href="#projects">Projetos</a></li>
+      <li><a href="#links">Lins Repositório</a></li>
+    </ul>
+    <div class="navbar__mobile">
+      <!-- Substituição da imagem pelo ícone SVG -->
+      <svg class="burguer" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24" fill="white">
+        <path d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"/>
+      </svg>
+      <!-- Fim da substituição -->
+      <ul class="mobile__links">
+        <li><a href="#header">Início</a></li>
+        <li><a href="#projects">Projetos</a></li>
+        <li><a href="#links">Lins Repositório</a></li>
+      </ul>
+    </div>
+  </div>
+</nav>
 
-        </ul>
-        <div class="navbar__mobile">
-          <img src="assets/menu.webp" alt="menu" class="burguer" />
-          <ul class="mobile__links">
-            <li><a href="#header">Início</a></li>
-            <li><a href="#projects">Projetos</a></li>
-            <li><a href="#links">Lins Repositório</a></li>
-
-          </ul>
-        </div>
-      </div>
-    </nav>
 
     <!-- header -->
     <!-- <header id="header" class="max-width">
