--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     <!-- Projetos -->
     <section id="projects" class="projects max-width">
       <div class="projects__content">
-        <h2 class="secondary-title">Projetos Faculdade</h2>
+        <h2 class="secondary-title">Aprendizagem por Projetos Integrados da FATEC</h2>
       </div>
       <ul>
         <li>
@@ -85,7 +85,7 @@
           </div>
           <div class="projects__info">
             <h3 class="tertiary-title">
-              Projeto integrador 1º Semestre
+              Projeto integrador 1º Semestre 2021
             </h3>
             <p>
               Desenvolver um portal de comunicação alternativo para a FATEC durante a pandemia de COVID-19,
@@ -107,6 +107,11 @@
               Nessa Sprint eu fiquei com a parte de desing do projeto, onde desenhei telas no figma para o front-end,
               onde apredi HTML e CSS e a parte de fluxo de telas.
             </p>
+            <h5 class="tertiary-title">
+              <a class="links" href="https://github.com/EquipeGfour/API-GFour-Primeiro-Semestre-">
+                Repositório 1º Semestre
+              </a>
+            </h5>
           </div>
         </li>
 
@@ -117,7 +122,7 @@
           </div>
           <div class="projects__info">
             <h3 class="tertiary-title">
-              Projeto integrador 2º Semestre
+              Projeto integrador 2º Semestre 2022
             </h3>
             <p>
               Desenvolver uma plataforma abrangente e segura para a gestão de talentos, que atenda às necessidades da área de Recursos Humanos e
@@ -141,7 +146,12 @@
               para poder desenvolver tasks para
               o time de DEV, ajustei as entregas para cada sprint.
               Com essa experiencia aprendi sobre a parte de metodologia agil.
-          </div>
+            <h5 class="tertiary-title">
+              <a class="links" href="https://github.com/EquipeGfour/Api-2-Semestre-">
+                Repositório 2º Semestre
+              </a>
+            </h5>
+            </div>
         </li>
 
         <li>
@@ -150,7 +160,7 @@
           </div>
           <div class="projects__info">
             <h3 class="tertiary-title">
-              Projeto integrador 3º Semestre
+              Projeto integrador 3º Semestre 2022
             </h3>
             <p>
               Desenvolver, em parceria com os alunos do 3º DSM da Fatec São José dos Campos, alternativas disruptivas de 
@@ -173,7 +183,11 @@
               foi uma nova experiencia ótima, onde desenvolvi conhecimento tanto sobre uma linguagem nova,
               quando uma nova forma de usar um banco de dados
             </p>
-              
+            <h5 class="tertiary-title">
+              <a class="links" href="https://github.com/EquipeGfour/API-3Semestre-UOL">
+                Repositório 3º Semestre
+              </a>
+            </h5>
           </div>
         </li>
 
@@ -183,7 +197,7 @@
           </div>
           <div class="projects__info">
             <h3 class="tertiary-title">
-              Projeto integrador 4º Semestre
+              Projeto integrador 4º Semestre 2023
             </h3>
             <p>
               Desenvolver uma estação meteorológica capaz de coletar e transmitir dados meteorológicos em tempo real, 
@@ -210,6 +224,11 @@
               Nessa Sprint fiquei na função de Master, onde procurava entender as dificuldades e duvidas do time para ajuda-los,
               também ajudei na parte do back end.
             </p>
+            <h5 class="tertiary-title">
+              <a class="links" href="https://github.com/EquipeGfour/API-5Semestre-OracleAcademy">
+                Repositório 4º Semestre 
+              </a>
+            </h5>
           </div>
         </li>
 
@@ -219,8 +238,8 @@
           </div>
           <div class="projects__info">
             <h3 class="tertiary-title">
-              Projeto integrador 5º Semestre
-            </h3>
+              Projeto integrador 5º Semestre 2023
+            </h3> 
             <p>
               Desenvolver uma aplicação para auxiliar na organização e planejamento de objetivos e tarefas diárias,
               priorizando-as por urgência, com marcações de tempo para controle preciso, mensuração da quantidade de tarefas realizadas e 
@@ -240,6 +259,11 @@
             <p>
               Nessa Sprint fiquei no Front-end, onde foi uma experiencia ótima pra mim, gostei muito de desenvolver para mobile.
             </p>
+            <h5 class="tertiary-title">
+              <a class="links" href="https://github.com/EquipeGfour/API-5-Semestre-">
+                Repositório 5º Semestre
+              </a>
+            </h5>
           </div>
         </li>
 
@@ -249,7 +273,7 @@
           </div>
           <div class="projects__info">
             <h3 class="tertiary-title">
-              Projeto integrador 6º Semestre
+              Projeto integrador 6º Semestre 2024
             </h3>
             <p>
               O objetivo deste projeto é desenvolver um sistema inovador que utiliza inteligência artificial (IA) em 
@@ -273,41 +297,16 @@
             <p>
               Nessa Sprint fiquei no Front-end e na integração do Back-end com o Front-end.
             </p>
+            <h5 class="tertiary-title">
+              <a class="links" href="https://github.com/EquipeGfour/API-6-Semestre-Dom-Rock">
+                Repositório 6º Semestre
+              </a>
+            </h5>
         </li>
           </div>
       </ul>
     </section>
 
-    <section id="links" class="projects max-width">
-      <div class="projects__content">
-        <h2 class="secondary-title">Links para Git Hub</h2>
-      </div>
-      <div class="projects__info">
-        <ul>
-          <li>
-              <a class="links" href="https://github.com/EquipeGfour/API-GFour-Primeiro-Semestre-">
-                Projeto integrador 1º Semestre
-              </a>
-              <a class="links" href="https://github.com/EquipeGfour/Api-2-Semestre-">
-                Projeto integrador 2º Semestre
-              </a>
-              <a class="links" href="https://github.com/EquipeGfour/API-3Semestre-UOL">
-                Projeto integrador 3º Semestre
-              </a>
-          </li>
-          <li>
-              <a class="links" href="https://github.com/EquipeGfour/API-4SemestreDSM-EstacaoMeteorologica">
-                Projeto integrador 4º Semestre
-              </a>
-              <a class="links" href="https://github.com/EquipeGfour/API-5Semestre-OracleAcademy">
-                Projeto integrador 5º Semestre
-              </a>
-              <a class="links" href="https://github.com/EquipeGfour/API-6-Semestre-Dom-Rock">
-                Projeto integrador 6º Semestre
-              </a>
-          </li>
-        </ul>
-      </div>
     <!-- script -->
     <script src="scripts/index.js"></script>
   </body>
